--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -105,4 +105,9 @@
 
 .morpheus-text {
   animation: morpheus 8s ease-in-out infinite;
+  letter-spacing: 0.12em;
+  font-size: 100px;
+  background: linear-gradient(to bottom, rgba(255, 85, 85, 0.8), rgba(255, 0, 0, 0.8));
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
