--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,12 +82,15 @@
   body {
     @apply bg-background text-foreground;
   }
+  p {
+    @apply text-[18px] leading-[1.6] tracking-body;
+  }
 }
 
 .morpheus-text {
   letter-spacing: 0.12em;
   font-size: 140px;
-  background: linear-gradient(to bottom, rgba(252, 21, 0, 0.8), rgba(0, 0, 0, 0));
+  background: linear-gradient(to bottom, rgba(252, 80, 0, 0.8), rgba(0, 0, 0, 0));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
