--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -88,9 +88,9 @@
 }
 
 .morpheus-text {
-  letter-spacing: 0.12em;
-  font-size: 140px;
-  background: linear-gradient(to bottom, rgba(252, 80, 0, 0.8), rgba(0, 0, 0, 0));
+  letter-spacing: 0.07em;
+  font-size: 150px;
+  background: linear-gradient(to bottom, rgba(252, 80, 0, 0.8), rgb(255, 0, 0));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
